--- a/resources/views/layouts/main.edge
+++ b/resources/views/layouts/main.edge
@@ -46,16 +46,6 @@
                   More
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <!--
-                    <a class="dropdown-item text-decoration-none" href="/alquileres/all">Ver todos los Alquileres</a>
-                    <a class="dropdown-item text-decoration-none" href="/alquileres/form">Registrar Alquiler Nuevo</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item text-decoration-none" href="/clientes/form">Registrar Cliente Nuevo</a>
-                    <a class="dropdown-item text-decoration-none" href="/clientes/all">Ver todos los Clientes</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item text-decoration-none" href="/prendas/form">Registrar Prenda Nueva</a>
-                    <a class="dropdown-item text-decoration-none" href="/prendas/all">Ver todas las Prendas</a>
-                  -->
                   <a class="dropdown-item text-decoration-none" href="/alquileres">Alquileres</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item text-decoration-none" href="/clientes">Clientes</a>
@@ -78,4 +68,5 @@
         @!section('content')
     </div>
 </body>
+    @!section('js-extra')
 </html>
