validacion form clientes v1 -> terminadas

--- a/resources/views/clientes/form.edge
+++ b/resources/views/clientes/form.edge
@@ -26,25 +26,16 @@
                 <form action="/clientes/registro" method="POST">
                     {{ csrfField() }}
                     <div class="form-group">
-                        <input  
-                            type="text" 
-                            class="form-control mt-2" 
-                            name="names" 
-                            placeholder="Nombres" 
-                            value="{{old('names' , '')}}" 
-                            id="names" 
-                            onkeyup="FieldName();"
-                        >
-
+                        <input type="text" class="form-control mt-2" name="names" placeholder="Nombres" value="{{old('names' , '')}}" id="field-name" onkeyup="FieldName();">
                         {{ elIf('<span class="messageError">$self</span> <br>', getErrorFor('names'), hasErrorFor('names'))  }}
 
-                        <input type="string" class="form-control mt-2" name="lastnames" placeholder="Apellidos" value="{{old('lastnames' , '')}}">
+                        <input type="string" class="form-control mt-2" name="lastnames" placeholder="Apellidos" value="{{old('lastnames' , '')}}" id="field-lastname" onkeyup="FieldLastname();">
                         {{ elIf('<span class="messageError">$self</span> <br>', getErrorFor('lastnames'), hasErrorFor('lastnames'))  }}
 
-                        <input type="number" class="form-control mt-2" name="cellphone" placeholder="Telefono" value="{{old('cellphone' , '')}}">
+                        <input type="number" class="form-control mt-2" name="cellphone" placeholder="Telefono" value="{{old('cellphone' , '')}}" id="field-number" onkeyup="FieldNumber();">
                         {{ elIf('<span class="messageError">$self</span> <br>', getErrorFor('cellphone'), hasErrorFor('cellphone'))  }}
 
-                        <input type="email" class="form-control mt-2" name="address" placeholder="Correo Electronico" value="{{old('address' , '')}}">
+                        <input type="email" class="form-control mt-2" name="address" placeholder="Correo Electronico" value="{{old('address' , '')}}" id="field-email" onkeyup="FieldEmail();">
                         {{ elIf('<span class="messageError">$self</span> <br>', getErrorFor('address'), hasErrorFor('address'))  }}
 
                         <input type="submit" class="form-control mt-2 btn btn-success btn-block" value="Submit">
@@ -59,10 +50,22 @@
 
 @section('js-extra')
 <script>
-   function FieldName ()  {
-        var element = document.getElementById('names')
-        element.value = element.value.replace(/[^a-zA-Z ]/,'')
-        console.log(element.value)
+    function FieldName() {
+        var element = document.getElementById('field-name')
+        element.value = element.value.replace(/[^a-z|A-Z ]+/,'')
     }
+    function FieldLastname() {
+        var element = document.getElementById('field-lastname')
+        element.value = element.value.replace(/[^a-z|A-Z ]+/,'')
+    }
+    function FieldNumber() {
+        var element = document.getElementById('field-number')
+        element.value = element.value.replace(/[^0-9]+/,'')
+    }
+    function FieldEmail() {
+        var element = document.getElementById('field-email')
+        element.value = element.value.replace(/\S+@\S+\.\S+/,'')
+    }
+
 </script>
 @endsection
