--- a/resources/views/prendas/form.edge
+++ b/resources/views/prendas/form.edge
@@ -1,8 +1,10 @@
 @layout('layouts.main')
 
 @section('style-extras')
-  {{style('prendas')}}
+{{style('css/prendas')}}
 @endsection
+
+
 
 @section('title')
   Prendas - Registro
