--- a/resources/views/prendas/find.edge
+++ b/resources/views/prendas/find.edge
@@ -1,7 +1,7 @@
 @layout('layouts.main')
 
 @section('style-extras')
-  {{style('prendas')}}
+{{style('css/prendas')}}
 @endsection
 
 @section('title')
