empezando las validaciones de prendas

--- a/public/style.css
+++ b/public/style.css
@@ -9,7 +9,7 @@ body {
   font-family: 'Montserrat', sans-serif;
   font-weight: 300;
   background-image: url("/splash.png");
-  background-color: #220052;
+  background-color: #87CEFA;
 }
 
 * {
