--- a/resources/views/alquileres/all.edge
+++ b/resources/views/alquileres/all.edge
@@ -1,7 +1,7 @@
 @layout('layouts.main')
 
 @section('style-extras')
-  {{style('alquileres')}}
+  {{style('css/alquileres')}}
 @endsection
 
 @section('title')
