--- a/resources/views/clientes/index.edge
+++ b/resources/views/clientes/index.edge
@@ -1,7 +1,7 @@
 @layout('layouts.main')
 
 @section('style-extras')
-    {{style('clientes')}}  
+    {{style('css/clientes')}}  
 @endsection
 
 @section('title')
