--- a/resources/views/index.edge
+++ b/resources/views/index.edge
@@ -1,7 +1,7 @@
 @layout('layouts.main')
 
 @section('style-extras')
-  {{style('index')}}
+  {{style('css/index')}}
 @endsection
 
 @section('title')
