--- a/resources/views/prendas/form.edge
+++ b/resources/views/prendas/form.edge
@@ -59,7 +59,7 @@
     <script>
         function FieldName() {
         var element = document.getElementById('field-name')
-        element.value = element.value.replace(/[^a-z|A-Z ]+/,'')
+        element.value = element.value.replace(/[^a-z|A-Z ]/,'')
     }
     </script>
 @endsection
