--- a/resources/views/alquileres/form.edge
+++ b/resources/views/alquileres/form.edge
@@ -18,25 +18,45 @@
             </a>
         </div>
         <div class="col-8">
-            <h2 class="card-title mt-3">Registro de Alquiler</h2>
+            <h2 class="card-title mt-3">Registro de Alquiler 2</h2>
         </div>
       </div>
       <div class="card-body">
       <form action="/alquileres/registro" method="POST">
             {{ csrfField() }}
               <div class="form-group">
-
-              <label for="" class="mt-3">Fecha de Entrega</label>
-              <input type="date" class="form-control" name="date_delivery" value="{{ old('date_delivery' , '')}}" required>
-               {{ elIf('<span class="messageError">$self</span> <br>', getErrorFor('date_delivery'), hasErrorFor('date_delivery'))  }}
-
-                <label for="" class="mt-3">Fecha de Devolucion</label>
-                <input type="date" class="form-control" name="return_date" value="{{ old('return_date' , '')}}" required>
-                {{ elIf('<span class="messageError">$self</span>', getErrorFor('return_date'), hasErrorFor('return_date'))  }}
-
-
+                
+                <div class="form-row">
+                  <div class="col-6">
+                      <label for="" class="mt-3">Fecha de Entrega</label>
+                      <input type="date" class="form-control" name="date_delivery" value="{{ old('date_delivery' , '')}}" required>
+                      {{ elIf('<span class="messageError">$self</span> <br>', getErrorFor('date_delivery'), hasErrorFor('date_delivery'))  }}
+                  </div>
+                  <div class="col-6">
+                      <label for="" class="mt-3">Fecha de Devolucion</label>
+                      <input type="date" class="form-control" name="return_date" value="{{ old('return_date' , '')}}" required>
+                      {{ elIf('<span class="messageError">$self</span>', getErrorFor('return_date'), hasErrorFor('return_date'))  }}
+                  </div>
+                </div>
                 <input type="number" class="form-control mt-3" placeholder="Valor del Alquiler" name="value" value="{{ old('value' , '')}}" required>
                 {{ elIf('<span class="messageError">$self</span>', getErrorFor('value'), hasErrorFor('value'))  }}
+
+                <div class="client">
+                  <label for="" class="mt-2">Selecciones un Cliente:</label>
+                  <select name="cliente_id" id="" class="form-control">
+                    @each(cli in cliente)
+                      <option value="{{cli.id}}">Nombre : {{cli.names}} {{cli.lastnames}} </option>
+                    @endeach
+                  </select>
+                  </div>
+                  <div class="prenda">
+                    <label for="">Selecciones una Prenda</label>
+                    <select name="prendas_id" id="" class="form-control">
+                      @each(pre in prenda)
+                    <option value="{{pre.id}}">Nombre : {{pre.name}} - Talla : {{pre.size}}</option>
+                      @endeach
+                    </select>
+                  </div>
 
                 <input type="submit" class="btn btn-primary btn-block mt-3" value="Submit">
               </div>
