modificacion a la tabla all + ver infomacion entre cliente - prenda - alquiler

--- a/public/css/alquileres.css
+++ b/public/css/alquileres.css
@@ -63,3 +63,11 @@ p{
     font-family: Lobster;
     font-size: 17px ;
 }
+.card-info-alquiler .card{
+    width: 80%;
+    margin: 30px auto auto;
+}
+#title-info{
+    font-family: Lobster;
+    font-size: 30px
+}
