--- a/resources/views/alquileres/delete.edge
+++ b/resources/views/alquileres/delete.edge
@@ -29,11 +29,40 @@
             <div class="form-group">
             <h2>Esta Seguro que desea borrar este Alquiler #{{alquileres_id.id}}</h2>
                 <span>
-                    <h4>Informacion:</h4>
-                    Fecha de Entrega : {{alquileres_id.date_delivery}} <br>
-                    Fecha de Devolucion : {{alquileres_id.return_date}} <br>
-                    Valor del Alquiler : {{alquileres_id.value}} <br>    
+                    <h4>Informacion del Alquiler:</h4>
+                    <p>
+                      Fecha de Entrega : {{alquileres_id.date_delivery}} <br>
+                      Fecha de Devolucion : {{alquileres_id.return_date}} <br>
+                      Valor del Alquiler : {{alquileres_id.value}}
+                    </p>
                 </span>
+                <span>
+                  <h4>Infomacion del Cliente - Prenda</h4>
+                  {{--Cliente--}}
+                  @each(cli in cliente)
+                    @if(alquileres_id.clients_id == cli.id)
+                      <p>
+                        Nombre del cliente: {{cli.names}} {{cli.lastnames}} <br>
+                        Telefono: {{cli.cellphone}} <br>
+                        E-mail: {{cli.address}}
+                      </p>
+                    @endif
+                  @else 
+                    <h5>Tiene relacion con algun cliente</h5>
+                  @endeach
+                  {{--Prenda--}}
+                  @each(pre in prenda)
+                    @if(alquileres_id.prendas_id == pre.id)
+                      <p>
+                        Nombre de la prenda: {{pre.name}}<br>
+                        Talla: {{pre.size}}
+                      </p>
+                    @endif
+                  @else 
+                    <h5>Tiene relacion con algun cliente</h5>
+                  @endeach
+                </span>
+                
 
                 <input type="submit" class="btn btn-danger btn-block mt-3" value="SI">
                 <a class="btn btn-success btn-block" href="/alquileres/all" style="text-decoration: none">No</a>
