--- a/resources/views/alquileres/destroy.edge
+++ b/resources/views/alquileres/destroy.edge
@@ -1,7 +1,7 @@
 @layout('layouts.main')
 
 @section('style-extras')
-  {{style('alquileres')}}
+  {{style('css/alquileres')}}
 @endsection
 
 @section('title')
@@ -29,10 +29,38 @@
             <div class="form-group">
             <h2>Esta Seguro que desea borrar este Alquiler #{{alquileres_id.id}}</h2>
                 <span>
-                    <h4>Informacion:</h4>
+                    <h4>Informacion del alquiler:</h4>
+                   <p>
                     Fecha de Entrega : {{alquileres_id.date_delivery}} <br>
                     Fecha de Devolucion : {{alquileres_id.return_date}} <br>
-                    Valor del Alquiler : {{alquileres_id.value}} <br>    
+                    Valor del Alquiler : {{alquileres_id.value}}    
+                  </p>
+                </span>
+                <span>
+                  <h4>Infomacion del Cliente - Prenda</h4>
+                  {{--Cliente--}}
+                  @each(cli in cliente)
+                    @if(alquileres_id.clients_id == cli.id)
+                      <p>
+                        Nombre del cliente: {{cli.names}} {{cli.lastnames}} <br>
+                        Telefono: {{cli.cellphone}} <br>
+                        E-mail: {{cli.address}}
+                      </p>
+                    @endif
+                  @else 
+                    <h5>Tiene relacion con algun cliente</h5>
+                  @endeach
+                  {{--Prenda--}}
+                  @each(pre in prenda)
+                    @if(alquileres_id.prendas_id == pre.id)
+                      <p>
+                        Nombre de la prenda: {{pre.name}}<br>
+                        Talla: {{pre.size}}
+                      </p>
+                    @endif
+                  @else 
+                    <h5>Tiene relacion con algun cliente</h5>
+                  @endeach
                 </span>
 
                 <input type="submit" class="btn btn-danger btn-block mt-3" value="SI">
