--- a/resources/views/index.edge
+++ b/resources/views/index.edge
@@ -9,56 +9,10 @@
 @endsection
 
 @section('content')
-<div class="contenido">
-
-  <div class="logo-cm">
-    <a href="/">
-      <img src="https://png.pngtree.com/element_pic/16/11/02/bd886d7ccc6f8dd8db17e841233c9656.jpg" alt="">
-    </a>
-  </div>
-  <h1>Confecciones Maribel</h1>
-
-  <h3 class="mt-4">About</h3>
-  <p class="mt-4">
-    Lorem ipsum dolor, sit amet consectetur 
-    adipisicing elit. Nihil, natus nostrum! 
-    Alias explicabo cupiditate dolor, consequuntur 
-    id placeat quae quos cumque velit tenetur eos doloribus earum in, 
-    incidunt reiciendis delectus?
-  </p>
-
-  <div class="links mt-5">
-    <ul class="nav nav-fill justify-content-center">
-
-      <li class="nav-item dropdown" >
-            <a class="nav-link dropdown-toggle " data-toggle="dropdown" 
-            href="#" role="button" aria-haspopup="true" aria-expanded="false">Ropa sobre medida</a>
-          <div class="dropdown-menu" >
-            <a href="#" class="nav-link text-decoration-none">Ropa para Mujer</a>
-            <div class="dropdown-divider"></div>
-            <a href="#" class="nav-link text-decoration-none">Ropa para Hombre </a>
-          </div>
-      </li>
-
-      
-      
-      <li class="nav-item dropdown" >
-          <a class="nav-link dropdown-toggle" data-toggle="dropdown" 
-          href="#" role="button" aria-haspopup="true" aria-expanded="false">Mas</a>
-          <div class="dropdown-menu" >
-            <a class="dropdown-item" href="/clientes" style="text-decoration: none">Clientes</a>
-            <a class="dropdown-item" href="/prendas" style="text-decoration: none">Prendas</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="/alquileres" style="text-decoration: none">Alquileres</a>
-          </div>
-      </li>
-
-      <li class="nav-item" >
-            <a href="contact" class="nav-link">Contacto</a>
-      </li>
-      
-    </ul>
-
+  <h1 class="text-center mt-5 display-2">Welcome To</h1>
+  <a href="/">
+    <img src="./logo.png" class="container img-fluid">
+  </a>
   </div>
 </div>
 
