--- a/public/style.css
+++ b/public/style.css
@@ -8,8 +8,8 @@ html, body {
 body {
   font-family: 'Montserrat', sans-serif;
   font-weight: 300;
-  background-image: url("/splash.png");
-  background-color: #220052;
+  /*background-image: url("/splash.png");
+  background-color: #220052;*/
 }
 
 * {
